src/test/ui/regions/regions-name-static.stderr
error[E0262]: invalid lifetime parameter name: `'static`
  --> $DIR/regions-name-static.rs:1:12
   |
LL | struct Foo<'static> {
   |            ^^^^^^^ 'static is a reserved lifetime name

warning: lifetime parameter `'static` never used
  --> $DIR/regions-name-static.rs:1:12
   |
LL | struct Foo<'static> {
   |           -^^^^^^^- help: elide the unused lifetime
   |
   = note: `#[warn(unused_lifetimes)]` on by default

error: aborting due to previous error

For more information about this error, try `rustc --explain E0262`.
